# SingleDualCrystal

./: CMakeLists.txt  README.md
compact/: CrystalAna.C  DRJunk.xml  DRJunk2.xml  DRSingleCrystal.gdml  DRSingleCrystal.save  DRSingleCrystal.xml  Overlay.C  Overlay2.C  Overlay3.C  SCEPCALConstants.xml  SCEPCAL_DRCrystal.xml  SCEPCAL_ECAL.xml  SCEPCALcosmicSteering.py  SCEPCALplot.C  SCEPCALres.C  SCEPCALsteering.py  condor-executable.sh  condor-job.jdl  dump.C  junkst.py  junkst2.py  rootlogon.C  vis.mac
src/: DRCrystal_geo.cpp  DualCrystalCalorimeterDump.cpp  DualCrystalCalorimeterHit.cpp  DualCrystalCalorimeterHit.h  DualCrystalCalorimeterSDAction.cpp  SCEGeant4Output2ROOT.cpp  SCEGeant4Output2ROOT.h
